--- a/config/wlogout/style.css
+++ b/config/wlogout/style.css
@@ -1,50 +1,100 @@
+/**
+ * wlogout - Forest Theme (style_1)
+ * Palette: bg #252f31 | fg #a5b0a2 | br #5b6d62 | sel #3e4e4a
+ * Launch: wlogout -b 6 -T 420 -B 420 -L 200 -R 200 -n
+ */
+
 * {
-	background-image: none;
-	box-shadow: none;
+  background-image: none;
+  font-size: 16px;
+  font-family: "Hurmit Nerd Font", sans-serif;
 }
 
 window {
-	background-color: rgba(12, 12, 12, 0.9);
+  background-color: rgba(25, 32, 33, 0.4);
 }
 
 button {
-    border-radius: 0;
-    border-color: black;
-	text-decoration-color: #FFFFFF;
-    color: #FFFFFF;
-	background-color: #1E1E1E;
-	border-style: solid;
-	border-width: 1px;
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: 25%;
+  color: #a5b0a2;
+  background-color: rgba(37, 47, 49, 0.82);
+  outline-style: none;
+  border: none;
+  border-width: 0px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 25%;
+  border-radius: 0px;
+  box-shadow: none;
+  text-shadow: none;
+  margin: 0px 0px 0px 0px;
+  transition:
+    background-color 0.3s ease,
+    background-size 0.3s ease,
+    margin 0.3s cubic-bezier(0.55, 0, 0.28, 1.682);
 }
 
-button:focus, button:active, button:hover {
-	background-color: #3700B3;
-	outline-style: none;
+button:focus {
+  background-color: rgba(62, 78, 74, 0.85);
+  background-size: 30%;
+}
+
+button:hover {
+  background-color: rgba(91, 109, 98, 0.7);
+  background-size: 35%;
+  border-radius: 20px;
+  margin: -30px 0px -30px 0px;
+}
+
+button:hover#lock {
+  border-radius: 40px 20px 20px 40px;
+  margin: -30px 0px -30px 0px;
+}
+
+button:hover#reboot {
+  border-radius: 20px 40px 40px 20px;
+  margin: -30px 0px -30px 0px;
 }
 
 #lock {
-    background-image: image(url("/usr/share/wlogout/icons/lock.png"), url("/usr/local/share/wlogout/icons/lock.png"));
+  background-image: image(
+    url("/home/dark869/.config/wlogout/icons/lock_white.png"),
+    url("/usr/share/wlogout/icons/lock.png")
+  );
+  border-radius: 40px 0px 0px 40px;
 }
 
 #logout {
-    background-image: image(url("/usr/share/wlogout/icons/logout.png"), url("/usr/local/share/wlogout/icons/logout.png"));
+  background-image: image(
+    url("/home/dark869/.config/wlogout/icons/logout_white.png"),
+    url("/usr/share/wlogout/icons/logout.png")
+  );
 }
 
 #suspend {
-    background-image: image(url("/usr/share/wlogout/icons/suspend.png"), url("/usr/local/share/wlogout/icons/suspend.png"));
-}
-
-#hibernate {
-    background-image: image(url("/usr/share/wlogout/icons/hibernate.png"), url("/usr/local/share/wlogout/icons/hibernate.png"));
+  background-image: image(
+    url("/home/dark869/.config/wlogout/icons/suspend_white.png"),
+    url("/usr/share/wlogout/icons/suspend.png")
+  );
 }
 
 #shutdown {
-    background-image: image(url("/usr/share/wlogout/icons/shutdown.png"), url("/usr/local/share/wlogout/icons/shutdown.png"));
+  background-image: image(
+    url("/home/dark869/.config/wlogout/icons/shutdown_white.png"),
+    url("/usr/share/wlogout/icons/shutdown.png")
+  );
+}
+
+#hibernate {
+  background-image: image(
+    url("/home/dark869/.config/wlogout/icons/hibernate_white.png"),
+    url("/usr/share/wlogout/icons/hibernate.png")
+  );
 }
 
 #reboot {
-    background-image: image(url("/usr/share/wlogout/icons/reboot.png"), url("/usr/local/share/wlogout/icons/reboot.png"));
+  background-image: image(
+    url("/home/dark869/.config/wlogout/icons/reboot_white.png"),
+    url("/usr/share/wlogout/icons/reboot.png")
+  );
+  border-radius: 0px 40px 40px 0px;
 }
